# mfb

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  status.md
.ai/: bugs.md  compiler.md  man_package_template.md  man_template.md  man_template.txt  man_type_template.md  man_type_template.txt  plan_template.md  planning.md  remote_systems.md  specifications.md
benchmark/: .gitignore  README.md  benchmark.sh  run.sh  runner.sh
bugs/: SESSION-2026-07-11-status.md  bug-101-fs-readtext-fd-leak-on-oom.md  bug-102-g10-runtime-low-cluster.md  bug-104-normalize-type-substring-hashset-nondeterminism.md  bug-107-monomorph-diagnostics-wrong-file.md  bug-111-gtk-term-setters-missing-inactive-gate.md  bug-112-macos-app-autorelease-pool-never-drained.md  bug-113-net-empty-host-bind-all-broken.md  bug-114-app-keydown-pipe-write-can-freeze-ui.md  bug-115-net-eintr-missing-across-blocking-calls.md  bug-116-macos-tls-configure-block-leaks-sec-protocol-options.md  bug-118-required-helpers-skips-match-guards.md  bug-120-runtime-specs-low-cluster.md  bug-122-riscv-v128-global-slot-thread-race.md  bug-123-x86-carry-out-xzr-writes-r8.md  bug-124-aarch64-encoder-hidden-scratch-clobber-cluster.md  bug-126-riscv-select-low-cluster.md  bug-127-regalloc-cross-isa-low-cluster.md  bug-128-fixed-atan2-overflow-and-min-negation.md  bug-130-neon-exp-kernel-range-boundaries.md  bug-132-pathnormalize-root-adjacent-pop.md  bug-134-float-log-subnormal-wrong.md  bug-136-crypto-ec-low-cluster.md  bug-137-math-codegen-low-cluster.md  bug-138-g9-deadcode-nits-cluster.md  bug-145-map-set-value-path-leaks-intermediates.md  bug-147-g8-collections-low-cluster.md  bug-148-loop-error-propagation-nulls-error-message.md  bug-149-console-pollinput-cooked-mode-requires-enter.md  bug-150-app-raw-input-enabled-lazily-first-key-needs-enter.md  bug-151-trap-error-object-leak.md  bug-152-fail-e-reraise-deep-copy-leak.md  bug-153-mfp-type-graph-decode-stack-overflow.md  bug-154-x86-add-carry-zero-token-rhs-adds-r8.md  bug-155-toint-named-arg-param-table-misbind.md  bug-156-return-and-with-update-numeric-literal-not-coerced.md  bug-157-macos-tls-write-byte-payload-count-not-capacity.md  bug-158-riscv-v128-fmls-two-rounding.md  bug-159-fs-errno-mapping-fallthrough-misclassify.md  bug-160-net-sendto-byte-payload-count-not-capacity.md  (+233 more)
examples/: .gitignore
planning/: allocator-20-coalesce-size-authority.md  audit-2-linker-hardening.md  audit-2-repository.md  audit-2-summary.md  goal-04-full-source-review.md  goal-05-platform-security-review.md  goal-06-full-source-review.md  mem.md  plan-13-A-app-package.md  plan-13-A-resource-union-params.md  plan-13-B-app-textarea.md  plan-13-B-attributestring.md  plan-13-B-textarea.md  plan-13-C-app-package.md  plan-13-C-app-table.md  plan-13-C-table.md  plan-13-D-layout-solver.md  plan-13-D-lifetime-detach.md  plan-13-E-events-input.md  plan-13-E-macos-backend.md  plan-13-F-gtk-backend.md  plan-13-G-events-input.md  plan-13-G-gtk-backend.md  plan-13-H-textarea.md  plan-13-I-table.md  plan-13-J-lifetime-detach.md  plan-13-K-polish-docs.md  plan-13-L-resource-union-params.md  plan-13-M-macos-backend.md  plan-13-S-layout-solver.md  plan-13-T-attributestring.md  plan-13-Z-polish-docs.md  plan-13-app-gui.md  plan-25-E-math-kernels.md  plan-30-A-ios-target.md  plan-30-B-ios-bundle.md  plan-30-C-uikit-runtime.md  plan-30-D-swift-async-abi.md  plan-30-E-iap-package.md  plan-32-A-rvv-runtime-detection.md  (+98 more)
repository/: .dockerignore  Cargo.toml  DEPLOY.md  Dockerfile  docker-entrypoint.sh  fly.toml
repository/src/: abi.rs  backfill.rs  blobstore.rs  client.rs  crypto.rs  gc.rs  lib.rs  local.rs  log.rs  main.rs  package.rs  server.rs  store.rs  validation.rs
repository/src/web/: mod.rs
repository/tests/: s3_backend.rs
scripts/: artifact-gate.sh  audit.sh  check-generated.sh  check-man-examples.py  check-net-connect-timeout.sh  codegen-selfdiff.sh  coverage-check.sh  coverage-common.sh  coverage-exceptions.txt  coverage.sh  fix_citations.py  gen_regex_unicode.py  gen_vector_man.py  gen_vector_package.py  gen_vector_tests.py  linux-artifact-baseline.sh  linux-runtime-proof.sh  list_functions.py  man_rules.sh  net_blackhole_server.py  sync-goldens.sh  test-accept-selftest.sh  test-accept.sh  test-appimage.sh  test-macapp.sh  update_man.sh  update_man_package.sh
specifications/: architecture.md  error_codes.md  large-files.md  linker.md  lockfile.md  memory_layouts.md  mfbasic.md  note-1.md  package_format.md  plan-01-arena-update.md  plan-01-collection-memory.md  plan-01-linker.md  plan-01-overridable-builtins.md  plan-01-term.md  plan-02-csv.md  plan-02-encoding.md  plan-02-flat-values.md  plan-02-inline-string.md  plan-02-linker-status.md  plan-03-http.md  plan-03-net.md  plan-03-resource-collections.md  plan-04-crypto.md  plan-05-http-server.md  plan-08-lambda-mut.md  plan-09-doc.md  plan-10-repo.md  plan-11-large-files.md  plan-12-unit-tests.md  plan-audit.md  plan-errors.md  plan-exit.md  plan-lambda-mut.md  plan-link-update.md  plan-linker-status.md  plan-linker.md  plan-linux-app.md  plan-macos-app.md  plan-new-bytecode.md  plan-regex.md  (+13 more)
src/: ast.rs  binary_repr.rs  bytecode.rs  coverage.rs  doc.rs  escape.rs  fmt.rs  internal_name.rs  ir.rs  lexer.rs  main.rs  man.rs  monomorph.rs  numeric.rs  resolver.rs  rules.rs  scope_privates.rs  target.rs  terminal_safe.rs  testing.rs  testutil.rs  typecheck.rs  unicode_backend.rs  unicode_runtime_tables.rs
tests/: build_verbosity_output.rs  entry_args.rs  fs_atomic_int_return.rs  fs_create_mode_0600.rs  fs_error_path_hygiene.rs  gtk_term_utf8_grid.rs  imported_resource_scope_drop.rs  linux_app_mode.rs  linux_pie_headers.rs  linux_rodata_readonly.rs  macos_app_io_input_imports.rs  macos_rodata_readonly.rs  macos_tls_write_capacity.rs  native_float_pow_operator_runtime.rs  native_io_runtime.rs  native_loop_runtime.rs  native_numeric_pow_div_runtime.rs  native_resource_scope_drop.rs  native_size_arith_overflow.rs  native_term_runtime.rs  repo_acceptance.rs  repo_auth.rs  (+6 more)
(+9061 files in other folders)
