[package]
name = "mfb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mfb_repository = { path = "repository" }
sha2 = "0.10"
tinyjson = "2.5"
unicode-casefold = "0.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
# Compiler build-time only (macOS app-icon `.icns` generation, plan-22-B). These
# add nothing to emitted programs. `image` is pinned to the PNG codec to bound the
# transitive tree.
image = { version = "0.25", default-features = false, features = ["png"] }
icns = "0.3"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
