# bug-347: `repository/` was a separate workspace, so `cargo test`/`--workspace`
# and `cargo llvm-cov --workspace` never built its test targets — 164 tests and
# ~13k lines of network-facing Rust sat outside every gate. Naming it a member
# puts it back in the test and coverage denominators.
[workspace]
members = [".", "repository"]
# With a package at the workspace root, a bare `cargo test` would select only
# that root package. Naming both keeps `cargo test` (no flags) equivalent to
# `cargo test --workspace`, which is what bug-347 requires.
default-members = [".", "repository"]

[package]
name = "mfb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mfb_repository = { path = "repository" }
sha2 = "0.10"
tinyjson = "2.5"
unicode-casefold = "0.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
# Compiler build-time only (macOS app-icon `.icns` generation, plan-22-B). These
# add nothing to emitted programs. `image` is pinned to the PNG codec to bound the
# transitive tree.
image = { version = "0.25", default-features = false, features = ["png"] }
icns = "0.3"

# bug-345-C2: production items stranded below an inline `mod tests` (the tests
# read as the end of the file, so the code under them is easy to miss). Five
# such sites were cleaned up; deny keeps them from coming back.
[lints.clippy]
items_after_test_module = "deny"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
# The repository acceptance test needs to age a `package_blobs` row to exercise
# `mfb-repo gc`'s 24h grace period (plan-49 §3.1) without waiting a day. Same
# version/features as the repository crate's, so it reuses the compiled SQLite.
rusqlite = { version = "0.31", features = ["bundled"] }
