[package]
name = "mfb_repository"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "mfb-repo"
path = "src/main.rs"

[features]
default = []
# Optional S3 (and S3-compatible) blob backend. Off by default so the AWS SDK
# is not compiled into the core `mfb` build, which depends on this crate; enable
# it when building the `mfb-repo` server (`cargo build -p mfb_repository
# --features s3`) to allow an `s3://` --datapath.
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
argon2 = "0.5"
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", optional = true, features = ["behavior-version-latest"] }
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
jsonwebtoken = "9.3"
# plan-61-C §2 layer 1: compile-time HTML templating whose default is *escaped*.
# The choice is a security property, not ergonomics — `maud`'s `html!` escapes
# every interpolated value and the bypass (`PreEscaped`) is explicit and
# greppable, which inverts the failure mode of hand-rolled `format!` where every
# interpolation is a place to forget. Its whole tail is `itoa` plus proc-macro
# crates already in the tree.
maud = "0.27"
rand = "0.8"
rand_core = "0.6"
# `rustls-tls` lets the package client reach https registries and, in S3 mode,
# follow the `GET /blob` redirect to the https presigned URL (rustls avoids a
# system-OpenSSL build dependency).
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# Test-only. `ServiceExt::oneshot` drives the assembled `Router` without binding
# a listener, which is what lets `router_has_no_route_conflicts_and_static_beats_param`
# prove matchit resolves `/packages/transfer/*` ahead of `/packages/:ident`.
# A route conflict panics at router construction, so without this the failure
# mode is a server that dies at startup rather than a red test. Dev-only: tower
# is already in the tree as an axum dependency and does not enter the binary.
tower = { version = "0.4", features = ["util"] }
